# stt-utils

./: .gitignore  README.md  pyproject.toml
src/stt_aligner/: __init__.py  stt.py
src/stt_utils/: __init__.py  splitter.py  transcription.py
tests/: test_aligner.py  test_splitter.py  test_utils.py
tests/assets/: homer.json
