[project]
name = "stt-utils"
version = "0.1.0"
description = "A utility library for working with speech-to-text transcriptions."
readme = "README.md"
authors = [{ name = "Mikhail Pankin", email = "mishapankin@gmail.com" }]
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "stt",
    "speech to text",
    "whisper",
    "alignment",
    "utility",
    "audio",
    "timestamps",
    "transcription",
    "closed captions",
    "subtitles",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["pydantic>=2.10"]

[project.optional-dependencies]
audio = ["pydub>=0.25.1"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.18.2", "pytest>=8.4.2", "ruff>=0.14.5"]
